algunos fixes del PMD